test fix about animation mobile glitch

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -801,7 +801,8 @@ body {
 
                     h1 {
                         padding-top: 5px;
-                        transition: font-size 2s ease-in-out, opacity 2.5s ease-in-out;
+                        height: auto;
+                        transition: font-size 2s ease-in-out, opacity 2.5s ease-in-out, height 2s ease-in-out;
                         font-family: 'Abril fatface', sans-serif;
                         font-size: 90px;
                         font-weight: 700;
